--- a/sh_portfolio/css/base/_reset.scss
+++ b/sh_portfolio/css/base/_reset.scss
@@ -104,14 +104,18 @@ section {
 }
 html {
   height: 100%;
+  font-family: 'notokr', sans-serif;
+  -webkit-tap-highlight-color: transparent;
+
+  // overflow-x: hidden;
 }
 body {
   height: 100%;
   min-width: rem(360);
-  font-family: 'notokr';
   font-size: $rem-base;
   font-weight: 500;
   line-height: 1.2;
+  overflow: auto;
 }
 
 ol,
@@ -119,36 +123,38 @@ ul,
 li {
   list-style: none;
 }
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
 img {
+  width: 100%;
   vertical-align: top;
 }
+
 input,
 textarea {
+  font-family: 'notokr', sans-serif;
   width: 100%;
   border: 0;
   outline: none;
 }
+
 textarea {
   resize: none;
 }
+
 button {
+  border: 0;
+  outline: 0;
+  background-color: transparent;
   cursor: pointer;
+}
+
+a {
+  color: #222222;
 }
 
 /* TYPOGRAPHY */
