--- a/sh_portfolio/css/layout/_contents.scss
+++ b/sh_portfolio/css/layout/_contents.scss
@@ -1,114 +1,88 @@
-.#{$ly} {
-  &-wrap {
-    textarea {
-      padding: rem(10);
+.visual-area {
+  position: relative;
+  height: rem(580);
+  padding-top: $headerHeight;
+  overflow: hidden;
+  .txt-area {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 84%;
+    padding-left: rem(20);
+    transform: translate(-50%, -50%);
+    &.animate {
+      .visual__title {
+        span {
+          strong {
+            animation: fadeUp 1.5s forwards;
+          }
+          + span {
+            strong {
+              animation: fadeUp 1.5s forwards 0.3s;
+            }
+          }
+        }
+        &-sub {
+          span {
+            top: rem(83);
+            animation: fadeUp 1.5s forwards 0.6s;
+          }
+        }
+      }
     }
-    .tab {
-      &-area {
-        &__btn {
-          @include onFlex(center, center);
-          li {
-            text-align: center;
-            &.on {
-              .tab__btn {
-                color: #ffffff;
-                background-color: #a2dcc7;
-              }
-            }
-            & + li {
-              margin-left: rem(10);
-            }
-          }
-          &.nav {
-            border-top: rem(1) solid #dddddd;
-            border-bottom: rem(1) solid #dddddd;
-            padding: rem(10) 0;
-          }
-        }
-        &__contents {
-          // height: rem(380);
-          margin: rem(80) 0;
-          .tab-area__contents {
-            margin-top: rem(30);
-          }
-        }
-      }
-      &__btn {
-        height: rem(30);
-        font-size: 19px;
-        font-weight: 700;
-        color: #222222;
-        line-height: rem(30);
-        background-color: #ffffff;
-        border-radius: 5px;
-        padding: 0 rem(10);
-      }
-      &__contents {
-        .contents {
-          // @include onFlex(flex-start, center);
-          width: calc(100% / 3);
 
-          // min-width: rem(320);
-          // min-height: rem(250);
-          text-align: left;
-          margin-right: 1%;
-          margin-bottom: rem(15);
-          overflow: hidden;
-          .img-area {
-            height: rem(330);
-            padding: rem(10);
-            background-color: #dddddd;
-            img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              object-position: center 0;
-            }
-          }
-          .title {
-            font-size: rem(18);
-            font-weight: 700;
-            text-align: left;
-            margin-top: rem(10);
-          }
-        }
-
-        .view__btn {
+    .visual__title {
+      display: inline-block;
+      color: $white;
+      span {
+        display: block;
+        font-size: rem(56);
+        letter-spacing: rem(-1.2);
+        line-height: 1.3;
+        overflow: hidden;
+        strong {
           position: relative;
-          display: block;
-          width: rem(140);
-          height: rem(40);
-          color: #67c2a2;
-          line-height: rem(37);
-          text-align: center;
-          border: rem(1) solid #67c2a2;
-          border-radius: rem(5);
-          background-color: #ffffff;
-          margin-top: rem(100);
-          transition: background-color 0.3s ease-in;
-          z-index: 10;
-          &:hover {
-            color: #fff;
-            background-color: #67c2a2;
+          top: rem(83);
+          // animation: fadeUp 1.5s forwards;
+        }
+        + span {
+          strong {
+            // animation: fadeUp 1.5s forwards 0.3s;
           }
         }
       }
+      &-sub {
+        color: $white;
+        margin-top: rem(50);
+        overflow: hidden;
+        span {
+          position: relative;
+          top: rem(83);
+          font-size: rem(16);
+          line-height: 1.4;
+          letter-spacing: rem(1);
+
+          // animation: fadeUp 1.5s forwards 0.6s;
+        }
+      }
+    }
+    p {
     }
   }
-  &-contents {
+  & + .cont-area {
+    height: calc(100% - 36.25rem);
+  }
+  .slide {
     &__wrap {
-      position: relative;
-      height: 100%;
+      & + .btn__group {
+        // position: absolute;
+        // width: 100%;
+        // top: 50%;
+        // transform: translateY(-50%);
+      }
     }
-
-    &__visual {
-      position: sticky;
-      top: -30%;
-      width: 100%;
-      height: 100vh;
-      background: url('../images/slide_2.jpg') no-repeat left center / cover;
-      z-index: 9;
-      &::after {
+    &__item {
+      &::before {
         content: '';
         position: absolute;
         top: 0;
@@ -116,168 +90,174 @@
         display: block;
         width: 100%;
         height: 100%;
-        background-color: rgba(0, 0, 0, 0.6);
+        background-color: rgba(0, 0, 0, 0.2);
       }
-      .txt-area {
-        position: relative;
-        @include onFlex();
-        flex-direction: column;
-        height: 100%;
-        @include maxWidth(rem(756));
-        text-align: center;
-        padding: 0 rem(30);
-        z-index: 10;
-        h2 {
-          font-size: rem(52);
-          font-weight: 600;
-          line-height: 1.1;
-          color: #ffffff;
-          margin-bottom: rem(20);
-          animation-delay: 0.4s;
-          span {
-            display: inline-block;
-            color: #67c2a2;
+    }
+  }
+}
+.cont {
+  &-area {
+  }
+  &__wrap {
+    max-width: rem(1280);
+    padding: rem(70) rem(40);
+    margin: 0 auto;
+    &--flex {
+      @include onFlex(flex-start, space-between);
+    }
+    section {
+    }
+    .cont {
+      &__left {
+        width: 45%;
+        // background-color: #f3f3f3;
+        a {
+          @include onFlex(flex-start, space-between);
+          width: 100%;
+          height: 100%;
+          .text-area {
+            // width: rem(230);
+            letter-spacing: rem(-1);
+            p {
+              margin-top: rem(20);
+            }
+          }
+          .img-area {
+            // width: calc(100% - 14.375rem);
+            // padding-left: rem(65);
+
+            img {
+              height: 100%;
+              object-fit: cover;
+            }
           }
         }
-        p {
-          line-height: rem(27);
-          color: #ffffff;
-          letter-spacing: rem(0.5);
-          animation-delay: 0.6s;
-        }
-        * {
-          transform: translateY(40%);
-          opacity: 0;
-          animation: slideIn 1s forwards ease-in-out;
+      }
+      &__right {
+        width: 55%;
+        padding-left: rem(100);
+        .tab {
+          &__cont {
+            .cont {
+              .list {
+                &-item {
+                  padding: rem(20) rem(10);
+                  li {
+                    @include onFlex(center, space-between);
+                    width: 100%;
+                    height: rem(25);
+                    a {
+                      position: relative;
+                      display: inline-block;
+                      width: calc(100% - 9.375rem);
+                      height: 100%;
+                      font-size: rem(14);
+                      color: $txtGray;
+                      white-space: nowrap;
+                      text-overflow: ellipsis;
+                      overflow: hidden;
+                      transition: color 0.3s ease-in;
+                    }
+                    & + li {
+                      margin-top: rem(10);
+                    }
+                    &:hover {
+                      a {
+                      }
+                    }
+                    &:hover {
+                      a {
+                        color: $mainColor;
+                      }
+                    }
+                  }
+                }
+                &-date {
+                  display: inline-block;
+                  width: rem(150);
+                  font-size: rem(14);
+                  color: #777777;
+                  text-align: right;
+                }
+              }
+            }
+          }
         }
       }
     }
-    &__main {
+  }
+  &__table {
+    .title {
+      font-size: rem(28);
+      margin-top: rem(100);
+    }
+    &-list {
+      background-color: #f1f1f1;
+      padding: rem(15);
+      margin-top: rem(20);
+
+      h3 {
+        font-size: rem(20);
+        span {
+          display: inline-block;
+          color: #e75935;
+          margin-left: rem(5);
+        }
+      }
+      .list-item {
+        margin-top: rem(15);
+        li {
+          position: relative;
+          font-size: rem(16);
+          padding-left: rem(15);
+          & + li {
+            margin-top: rem(10);
+          }
+          span {
+            color: #e75935;
+          }
+          &::before {
+            content: '';
+            position: absolute;
+            top: rem(8);
+            left: rem(5);
+            display: block;
+            width: rem(5);
+            height: rem(1);
+            background-color: #222222;
+          }
+        }
+      }
+      & + .table-area {
+        margin-top: rem(40);
+      }
+    }
+    .order-num {
+      display: block;
+    }
+    .table-em {
       position: relative;
-      height: 100%;
-      background-color: #ffffff;
-      padding: rem(100) 0;
-      z-index: 10;
-    }
-    &__section {
-      // @include maxWidth();
-      .contents-area {
-        padding: rem(200) 0 rem(20);
-        overflow: hidden;
-        .title {
-          font-size: rem(48);
-          text-align: center;
-          color: #222222;
-          margin-bottom: rem(70);
-        }
+      display: inline-block;
+      text-decoration: underline;
+      padding-left: rem(12);
+      &::before {
+        content: '*';
+        position: absolute;
+        top: rem(2);
+        left: 0;
+        display: block;
+        font-size: rem(18);
       }
-      &:first-child {
-        .contents-area {
-          padding-top: 0;
-        }
-      }
+      // &::after {
+      //   content: '';
+      //   position: absolute;
+      //   left: rem(12);
+      //   bottom: rem(-2);
+      //   display: block;
+      //   width: calc(100% - 0.75rem);
+      //   height: rem(1);
+      //   background-color: #222222;
+      // }
     }
-  }
-}
-.dim {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  visibility: hidden;
-  background-color: rgba(0, 0, 0, 0.5);
-  opacity: 0;
-  transition: all 0.3s ease-in;
-  z-index: 999;
-  &.on {
-    visibility: visible;
-    opacity: 1;
-  }
-}
-.popup {
-  &__wrap {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    width: rem(300);
-    height: rem(180);
-    background-color: #ffffff;
-    transform: translate(-50%, -50%);
-  }
-}
-.btn {
-  &__close {
-  }
-}
-.swiper {
-  &-wrappper {
-    position: relative;
-    width: auto;
-    height: auto;
-    z-index: 0;
-    display: flex;
-    transition-property: none;
-    box-sizing: inherit;
-  }
-  &-slide {
-    flex-shrink: 1;
-    width: auto;
-    height: auto;
-    position: relative;
-    transition-property: none;
-  }
-}
-
-@media (max-width: 1024px) {
-  .ly-contents__section {
-    padding: 0 5%;
-  }
-  .tab__contents {
-    display: none;
-  }
-  .tab__contents.on {
-    display: block;
-  }
-
-  .ly-contents__section .contents-area .tab__contents .img-area {
-    width: 100%;
-    margin-top: rem(20);
-    margin-left: 0;
-  }
-
-  .ly-contents__section .contents-area .tab__contents .view__btn {
-    margin-top: rem(20);
-  }
-  .ly-wrap .ly-footer {
-    padding: rem(20) 5%;
-  }
-}
-
-@media (max-width: 850px) {
-  .gnb {
-    display: none;
-  }
-  .ly-contents__section .contents-area .tab-area__btn li + li {
-    margin-left: 0;
-  }
-  .ly-contents__section .contents-area .tab__contents .img-area {
-    height: rem(300);
-  }
-  .ly-contents__section .skills-area .skill {
-  }
-
-  .ly-wrap .skills-area .skill-name:hover {
-    top: 0;
-  }
-}
-
-@media (max-width: 850px) {
-  .ly-wrap .ly-footer {
-    display: block;
-  }
-  .ly-wrap .ly-footer .contact {
-    margin-top: rem(10);
   }
 }
