--- a/sh_portfolio/css/layout/_footer.scss
+++ b/sh_portfolio/css/layout/_footer.scss
@@ -1,22 +1,35 @@
 footer {
-  background-color: #c8d9d3;
-}
-.#{ly} {
-  &-footer {
-    @include onFlex(center, space-between);
-    @include maxWidth();
-    font-size: rem(14);
-    color: #ffffff;
-    padding: rem(20) 3%;
-    ul {
-      li {
-        & + li {
-          margin-top: rem(5);
+  @include onFlex(center, center);
+  flex-direction: column;
+  height: rem(120);
+  font-size: rem(12);
+  color: $white;
+  background-color: $mainColor;
+  @include basePad();
+  padding-top: rem(30);
+  padding-bottom: rem(30);
+  .adrs {
+    span {
+      position: relative;
+      padding: 0 rem(10);
+      & + span {
+        &::before {
+          content: '';
+          position: absolute;
+          width: rem(1);
+          height: rem(4);
+          top: calc(50% + 0.0625rem);
+          left: 0;
+          display: block;
+          width: rem(1);
+          height: calc(100% - 0.25rem);
+          background-color: $white;
+          transform: translateY(-50%);
         }
       }
     }
-    &__logo {
-      // color: #ffffff;
-    }
+  }
+  .copy {
+    margin-top: rem(20);
   }
 }
